--- a/css/Dashboard.css
+++ b/css/Dashboard.css
@@ -26,6 +26,18 @@ ul {
   list-style: none;
   padding: 0;
 }
+::-webkit-scrollbar {
+  width: 15px;
+}
+::-webkit-scrollbar-track {
+  background-color: white;
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--blue-color);
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--blue-alt-color);
+}
 .page {
   background-color: #f1f5f9;
   min-height: 100vh;
@@ -145,5 +157,29 @@ ul {
   margin-left: 10px;
 }
 /* End Head */
+
+.page h1 {
+  margin: 20px 20px 40px;
+  &::before {
+    content: "";
+    position: absolute;
+    left: 3px;
+    bottom: -10px;
+    width: 120px;
+    height: 3px;
+    background-color: white;
+    border-radius: 6px;
+  }
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    left: 3px;
+    height: 3px;
+    background-color: black;
+    width: 40px;
+    border-radius: 6px;
+  }
+}
 
 /* End Content */
