--- a/css/Dashboard.css
+++ b/css/Dashboard.css
@@ -149,7 +149,7 @@ ul {
   background-color: var(--red-color);
   border-radius: 50%;
   top: -5px;
-  right: -5px;
+  right: -2px;
 }
 .content .head .icons img {
   width: 32px;
@@ -181,5 +181,67 @@ ul {
     border-radius: 6px;
   }
 }
+
+/* Start Wrapper */
+
+.wrapper {
+  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+  gap: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+@media (max-width: 767px) {
+  .wrapper {
+    grid-template-columns: minmax(250px, 1fr);
+    margin-left: 10px;
+    margin-right: 10px;
+    gap: 10px;
+  }
+}
+
+.wrapper .welcome {
+  overflow: hidden;
+}
+
+.wrapper .welcome .intro img {
+  width: 170px;
+  margin-bottom: -10px;
+}
+.wrapper .avatar {
+  height: 64px;
+  width: 64px;
+  border-radius: 50%;
+  border: 2px solid white;
+  padding: 2px;
+  box-shadow: 0 0 5px #ddd;
+  margin-left: 20px;
+  margin-top: -32px;
+}
+
+@media (max-width: 767px) {
+  .wrapper .avatar {
+    margin-left: 0;
+  }
+  .wrapper .body > div:not(:last-child) {
+    margin-bottom: 20px;
+  }
+}
+.wrapper .welcome .body {
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+}
+.wrapper .welcome .body > div {
+  flex: 1;
+}
+.wrapper .welcome .visit {
+  margin: 0 15px 15px auto;
+  transition: var(--main-transition);
+}
+.wrapper .welcome .visit:hover {
+  background-color: var(--blue-alt-color);
+}
+
+/* End Wrapper */
 
 /* End Content */
