--- a/css/Framework.css
+++ b/css/Framework.css
@@ -10,8 +10,30 @@
 .d-flex {
   display: flex;
 }
+.space-between {
+  justify-content: space-between;
+}
+.d-block {
+  display: block;
+}
+.d-grid {
+  display: grid;
+}
+.g-20 {
+  gap: 20px;
+}
 .align-center {
   align-items: center;
+}
+@media (max-width: 767px) {
+  .d-block-mobile {
+    display: block;
+  }
+}
+@media (max-width: 767px) {
+  .hide-mobile {
+    display: none;
+  }
 }
 /* End Box */
 
@@ -25,22 +47,52 @@
 .p-20 {
   padding: 20px;
 }
+.pr-20 {
+  padding-right: 20px;
+}
 .m-20 {
   margin: 20px;
+}
+.m-0 {
+  margin: 0;
 }
 .mt-0 {
   margin-top: 0;
 }
+.mt-5 {
+  margin-top: 5px;
+}
+.mt-10 {
+  margin-top: 10px;
+}
+.mt-20 {
+  margin-top: 20px;
+}
 .ml-10 {
   margin-left: 10px;
+}
+.mb-20 {
+  margin-bottom: 20px;
 }
 /* End Padding + Margin */
 /* Start Colors */
 .bg-white {
   background-color: #fff;
 }
+.bg-blue {
+  background-color: var(--blue-color);
+}
+.c-white {
+  color: white;
+}
 .c-black {
   color: #000;
+}
+.c-grey {
+  color: var(--grey-color);
+}
+.bg-eee {
+  background-color: #eee;
 }
 /* End Colors */
 /* Start Position */
@@ -55,6 +107,9 @@
 .w-full {
   width: 100%;
 }
+.w-fit {
+  width: fit-content;
+}
 .txt-c {
   text-align: center;
 }
@@ -64,10 +119,20 @@
 .fw-bold {
   font-weight: bold;
 }
+
+@media (max-width: 767px) {
+  .txt-c-mobile {
+    text-align: center;
+  }
+}
+
 /* End Font */
 /* Start border */
 .rad-6 {
   border-radius: 6px;
+}
+.rad-10 {
+  border-radius: 10px;
 }
 /* End border */
 /* Start Components */
