Finished the Yeraly Targers Section

--- a/css/Framework.css
+++ b/css/Framework.css
@@ -108,6 +108,27 @@
 .bg-blue {
   background-color: var(--blue-color);
 }
+.bg-orange {
+  background-color: var(--orange-color);
+}
+.bg-green {
+  background-color: var(--green-color);
+}
+.bg-red {
+  background-color: var(--red-color);
+}
+.c-blue {
+  color: var(--blue-color);
+}
+.c-orange {
+  color: var(--orange-color);
+}
+.c-green {
+  color: var(--green-color);
+}
+.c-red {
+  color: var(--red-color);
+}
 .c-white {
   color: white;
 }
@@ -137,6 +158,9 @@
 .fs-14 {
   font-size: 14px;
 }
+.fs-15 {
+  font-size: 15px;
+}
 .fw-bold {
   font-weight: bold;
 }
@@ -157,6 +181,11 @@
 }
 /* End border */
 /* Start Components */
+.center-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .between-flex {
   display: flex;
   justify-content: space-between;
