--- a/css/Dashboard.css
+++ b/css/Dashboard.css
@@ -254,6 +254,68 @@ ul {
 
 /* End Quick Draft widget */
 
+/* Start Targers Section */
+.targets .target-row .icon {
+  width: 80px;
+  height: 80px;
+  margin-right: 15px;
+}
+.targets .details {
+  flex: 1;
+}
+.targets .details .progress {
+  height: 4px;
+}
+.targets .details .progress > span {
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  left: 0;
+  top: 0;
+}
+.targets .details .progress > span span {
+  position: absolute;
+  font-size: 12px;
+  padding: 2px 5px;
+  display: block;
+  bottom: 15px;
+  right: -17px;
+  border-radius: 6px;
+}
+.targets .details .progress > span span::after {
+  content: "";
+  position: absolute;
+  border-style: solid;
+  border-color: transparent;
+  border-width: 5px;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.targets .details .progress > .blue span::after {
+  border-top-color: var(--blue-color);
+}
+.targets .details .progress > .orange span::after {
+  border-top-color: var(--orange-color);
+}
+.targets .details .progress > .green span::after {
+  border-top-color: var(--green-color);
+}
+.blue .icon,
+.blue .progress {
+  background-color: rgba(0, 117, 255, 0.2);
+}
+.orange .icon,
+.orange .progress {
+  background-color: rgba(245, 158, 11, 0.2);
+}
+.green .icon,
+.green .progress {
+  background-color: rgba(34, 197, 94, 0.2);
+}
+/* End Targers Section */
+
 /* End Wrapper */
 
 /* End Content */
